added alien 101 website to portfolio

--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,7 @@ nav {
     box-shadow: 0 6px 31px -2px rgba(0, 0, 0, 0.1);
 }
 
-#varieties {
+#projects {
     background-color: #e3e3e3;
 }
 
@@ -279,13 +279,13 @@ nav {
 }
 
 
-#our-service {
+#skills {
     background-color: #F5F3F4;
 }
 
 
 
-#our-service .sec-content-div {
+#skills .sec-content-div {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
