--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@ body {
     padding: 0;
 }
 
+.form-group {
+    margin-bottom: 15px;
+  }
 
 #header {
     height: max-content;
@@ -197,16 +200,16 @@ nav {
     font-weight: 500;
     line-height: 1.2;
     margin: 0;
-    padding: 5rem 0 5rem 0;
+    padding: 5rem 0 1rem 0;
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 .sec-content-div {
     font-size: 2rem;
     text-align: start;
-    padding: 0 2rem 5rem 2rem;
+    padding: 0 2rem 2rem 3rem;
     width: auto;
-    justify-content: space-around;
     max-width: 95rem;
     margin: 0 auto;
 }
@@ -359,6 +362,10 @@ nav {
     }
 }
 
+html {
+    scroll-padding-top: 4rem;
+  }
+
 img.html {
     width: 60%;
     max-width: 60rem;
@@ -474,10 +481,9 @@ h4.python {
     font-size: 2.3rem;
 }
 
-
 #contact {
     background-color: #cb3737;
-    color: #fafafa;
+    color: #F5F3F4;
 }
 
 #contact h6 {
@@ -485,25 +491,56 @@ h4.python {
     font-weight: 500;
 }
 
-input[type="email"] {
-    border: none;
-    outline: 0;
-    font-size: 2rem;
-    border-radius: 0.4rem;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    padding: 2rem;
-}
-
 @media (max-width: 520px) {
     #contact h6 {
         font-size: 2rem;
     }
 
-    #contact input[type="submit"],
-    #contact input[type="email"] {
+    #contact input[type="submit"]
+    {
         margin: 1rem 1rem 0 1rem;
     }
 }
+
+.form-group {
+    margin-bottom: 15px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 300px; /* Set width to 300 pixels for all input fields and textarea */
+    padding: 8px;
+    font-family: inherit; /* Inheriting font from the body */
+    font-size: 16px; /* Setting font size to match other fields */
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+
+  textarea {
+    height: 150px; /* Larger height for the 'message' textarea */
+    resize: vertical; /* Allowing vertical resizing */
+  }
+  
+  input[type="submit"] {
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    background-color: #e23d3d;
+    color: white;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #e23d3d;
+  }
 
 footer {
     font-size: 1.4rem;
