--- a/styles.css
+++ b/styles.css
@@ -298,6 +298,7 @@ nav {
     @media (max-width: 480px) {
         grid-template-columns: repeat(1, 1fr);
         margin-left: 50px;
+        align-items: center;
         /* Single column for screens up to 480px */
     }
 }
